[package]
name = "blockchain-keygen"
version = "0.1.0"
edition = "2021"
description = "Generate safe keys for different blockchains off-line"
repository = "https://github.com/ericnordelo/blockchain-keygen"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8.0"
rand_chacha = "^0.3.0"
hex = "^0.4.0"
ethers = "^1.0.0"
secp256k1 = "^0.26.0"
clap = { version = "4.1.1", features = ["derive"] }
